@@ -13,6 +13,8 @@
 
 
 Version 2.0 
+	BETA - 7
+	- Clone Options
 	BETA - 6
 	- Design Control
 	- Color Math
